--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pics-core/rbac-policygroups",
-  "version": "1.0.0-OR.10",
+  "version": "1.0.0-OR.19",
   "description": "This library was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.2.0.",
   "directories": {
     "lib": "lib"
@@ -8,14 +8,14 @@
   "author": "tulasireddy",
   "license": "ISC",
   "peerDependencies": {
-    "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/material": "^11.2.13",
-    "bootstrap": "^4.6.0",
-    "@angular/cdk": "^13.3.4",
+    "@angular/common": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/material": "^16.2.12",
+    "bootstrap": "^5.1.3",
+    "@angular/cdk": "^16.2.12",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.2",
+    "primeng": "^16.3.1",
     "rxjs": "~6.6.0",
     "quill": "^1.3.6"
   },
@@ -24,9 +24,12 @@
   },
   "main": "bundles/pics-core-rbac-policygroups.umd.js",
   "module": "fesm2015/pics-core-rbac-policygroups.js",
+  "es2022": "fesm2022/pics-core-rbac-policygroups.js",
+  "esm2022": "esm2022/pics-core-rbac-policygroups.js",
+  "fesm2022": "fesm2022/pics-core-rbac-policygroups.js",
+  "typings": "pics-core-rbac-policygroups.d.ts",
+  "sideEffects": false,
   "es2015": "fesm2015/pics-core-rbac-policygroups.js",
   "esm2015": "esm2015/pics-core-rbac-policygroups.js",
-  "fesm2015": "fesm2015/pics-core-rbac-policygroups.js",
-  "typings": "pics-core-rbac-policygroups.d.ts",
-  "sideEffects": false
+  "fesm2015": "fesm2015/pics-core-rbac-policygroups.js"
 }
